--- a/page4.html
+++ b/page4.html
@@ -52,8 +52,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="index.html#header2-1"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Aktuelles&nbsp;</a>
-                </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html#pricing-tables3-8" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-clock mbr-iconfont mbr-iconfont-btn"></span>Zeiten</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page1.html">Bürozeiten<br></a><a class="dropdown-item text-primary display-4" href="page1.html#pricing-tables3-8">Betreuungszeiten</a><a class="dropdown-item text-primary display-4" href="page1.html#step1-9">Schließzeiten</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Unsere Einrichtung
-                        </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="#top" aria-expanded="false">Beschreibung der Einrichtung und Lage</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-e" aria-expanded="false">Pädagogische Konzeption</a><a class="dropdown-item text-primary display-4" href="page4.html#header16-f" aria-expanded="false">Verpflegung</a><a class="dropdown-item text-primary display-4" href="page4.html#progress-bars3-g" aria-expanded="false">Kapazität</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-h" aria-expanded="false">Bilingualität</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Arbeiten bei uns</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#pricing-tables1-6" aria-expanded="false"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Beiträge</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Formulare</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html#pricing-tables3-8" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-clock mbr-iconfont mbr-iconfont-btn"></span>Zeiten</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page1.html">Bürozeiten<br></a><a class="dropdown-item text-primary display-4" href="page1.html#pricing-tables3-8">Betreuungszeiten</a><a class="dropdown-item text-primary display-4" href="page1.html#step1-9">Schließzeiten</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Unsere Einrichtung
+                        </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="#top" aria-expanded="false">Beschreibung der Einrichtung und Lage</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-e" aria-expanded="false">Pädagogische Konzeption</a><a class="dropdown-item text-primary display-4" href="page4.html#header16-f" aria-expanded="false">Verpflegung</a><a class="dropdown-item text-primary display-4" href="page4.html#progress-bars3-g" aria-expanded="false">Kapazität</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-h" aria-expanded="false">Bilingualität</a><a class="dropdown-item text-primary display-4" href="page4.html#form1-i" aria-expanded="false">Arbeiten bei uns</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#pricing-tables1-6" aria-expanded="false"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Beiträge</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Formulare</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">
                         </a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-gallery gallery5 cid-rNsKmT2akD" id="gallery5-c">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-gallery gallery5 cid-rNsKmT2akD" id="gallery5-c">
 
     
 
@@ -149,7 +149,7 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ8cmwr8TXsEcRpe3KfmxJIcA" allowfullscreen=""></iframe></div>
+    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ8cmwr8TXsEcRpe3KfmxJIcA" allowfullscreen=""></iframe></div>
 </section>
 
 <section class="mbr-section content4 cid-rNsMPExmOz" id="content4-e">
@@ -295,7 +295,7 @@ Im Sinne von mehr Lebensqualität für Alle nehmen wir dafür höhere Kosten bei
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JYkbECbKbx0o45ItSv+zPfLfSfRrYepVtRx3RPNwHQu+4KyePDe9bUptkzG4lTQWgr63cOfvlWwWoc2+tbg7wRo4YHzRV13lFTLblwh3hWSbzz8H3UR8OtAeHs9o/bIz">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rVlVpziM8VBK56LGIXV8n3cvSNF6KCvJLMK8OV0/hLIM6g9SpM817G1i0Ji2xVlDf0iq8Go8fVRBkyrU+cd+Z/IRLY/gjw/B77MszX6jQvL6kBuV7EAk8i35JucyU1GQ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
