--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="index.html#header2-1"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Aktuelles&nbsp;</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html#pricing-tables3-8" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-clock mbr-iconfont mbr-iconfont-btn"></span>Zeiten</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page1.html">Bürozeiten<br></a><a class="dropdown-item text-primary display-4" href="page1.html#pricing-tables3-8">Betreuungszeiten</a><a class="dropdown-item text-primary display-4" href="page1.html#step1-9">Schließzeiten</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Unsere Einrichtung
-                        </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="#top" aria-expanded="false">Beschreibung der Einrichtung und Lage</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-e" aria-expanded="false">Pädagogische Konzeption</a><a class="dropdown-item text-primary display-4" href="page4.html#header16-f" aria-expanded="false">Verpflegung</a><a class="dropdown-item text-primary display-4" href="page4.html#progress-bars3-g" aria-expanded="false">Kapazität</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-h" aria-expanded="false">Bilingualität</a><a class="dropdown-item text-primary display-4" href="page4.html#form1-i" aria-expanded="false">Arbeiten bei uns</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#pricing-tables1-6" aria-expanded="false"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Beiträge</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Formulare</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html#pricing-tables3-8" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-clock mbr-iconfont mbr-iconfont-btn"></span>Zeiten</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page1.html">Bürozeiten<br></a><a class="dropdown-item text-primary display-4" href="page1.html#pricing-tables3-8">Betreuungszeiten</a><a class="dropdown-item text-primary display-4" href="page1.html#step1-9">Schließzeiten</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Unsere Einrichtung
+                        </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page4.html#gallery5-c" aria-expanded="false">Beschreibung der Einrichtung und Lage</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-e" aria-expanded="false">Pädagogische Konzeption</a><a class="dropdown-item text-primary display-4" href="page4.html#header16-f" aria-expanded="false">Verpflegung</a><a class="dropdown-item text-primary display-4" href="page4.html#progress-bars3-g" aria-expanded="false">Kapazität</a><a class="dropdown-item text-primary display-4" href="page4.html#content4-h" aria-expanded="false">Bilingualität</a><a class="dropdown-item text-primary display-4" href="page4.html#form1-i" aria-expanded="false">Arbeiten bei uns</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#pricing-tables1-6" aria-expanded="false"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Beiträge</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#table1-n" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Formulare</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">
                         </a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -78,7 +78,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><br>"Die Frechdachse"</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>In unserer Kita werden bis zu 55 Kinder Liebevoll betreut. Die Einrichung verfügt über einen kleinen Garten mit Sandkasten und Klettergerüst, aber auch die zahlreichen Parks und Spielplätze in der näheren Umgebung werden von uns ausgiebig genutzt. Wir werden durch das bundesweite Förderprogramm "Kita-Plus" gefördert und können so den Spracherwerb der Kinder durch eine zusätzliche Sprachförderung besonders intensiv unterstützen.</strong></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary-outline display-4" href="https://mobirise.com">Unser Team</a> <a class="btn btn-md btn-primary-outline display-4" href="https://mobirise.com">Anfahrt</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary-outline display-4" href="page4.html#gallery5-c">Unser Team</a> <a class="btn btn-md btn-primary-outline display-4" href="page4.html#map1-d">Anfahrt</a></div>
             </div>
         </div>
     </div>
@@ -102,9 +102,7 @@
                     <h3 class="plan-title mbr-fonts-style display-5">
                         Vormittag</h3>
                     <div class="plan-price">
-                        <span class="price-value mbr-fonts-style display-5">
-                            $
-                        </span>
+                        <span class="price-value mbr-fonts-style display-5">€&nbsp;</span>
                         <span class="price-figure mbr-fonts-style display-1">60</span>
                         <small class="price-term mbr-fonts-style display-7">
                             pro Monat
@@ -117,9 +115,7 @@
                             <li class="list-group-item"><span style="font-size: 1.2rem;">+ Frühstück<br></span>+ Betreuung<br>+ Bastelgeld</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">JETZT KAUFEN</a>
-                    </div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.co" class="btn btn-primary display-4">Anmeldeformular</a></div>
                 </div>
             </div>
 
@@ -128,9 +124,7 @@
                     <h3 class="plan-title mbr-fonts-style display-5">
                         Ganztag</h3>
                     <div class="plan-price">
-                        <span class="price-value mbr-fonts-style display-5">
-                            $
-                        </span>
+                        <span class="price-value mbr-fonts-style display-5">€&nbsp;</span>
                         <span class="price-figure mbr-fonts-style display-1">125</span>
                         <small class="price-term mbr-fonts-style display-7">
                             pro Monat</small>
@@ -142,9 +136,7 @@
                             <li class="list-group-item">+ Frühstück<br>+ Mittagessen<br>+ Snacks<br>+ Betreuung<br>+ Bastelgeld</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">JETZT KAUFEN</a>
-                    </div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.co" class="btn btn-primary display-4">Anmeldeformular</a></div>
                 </div>
             </div>
 
@@ -153,9 +145,7 @@
                     <h3 class="plan-title mbr-fonts-style display-5">
                         Früh- &amp; Spätbetreuung</h3>
                     <div class="plan-price">
-                        <span class="price-value mbr-fonts-style display-5">
-                            $
-                        </span>
+                        <span class="price-value mbr-fonts-style display-5">€&nbsp;</span>
                         <span class="price-figure mbr-fonts-style display-1">20</span>
                         <small class="price-term mbr-fonts-style display-7">
                             pro Monat</small>
@@ -167,9 +157,7 @@
                             <li class="list-group-item">+ Snack<br>+ Betreuung</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">JETZT KAUFEN</a>
-                    </div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.co" class="btn btn-primary display-4">Anmeldeformular</a></div>
                 </div>
             </div>
 
